--- a/templates/lieu/create.html.twig
+++ b/templates/lieu/create.html.twig
@@ -174,11 +174,14 @@
             </script>
 
             <br>
-            <button type="submit" class="link_button btn btn-outline-secondary">Enregistrer</button>
+            <button type="submit" class="link_button btn btn-outline-success">Enregistrer</button>
             <a class="link_button btn btn-outline-danger" href="{{ path('lieu_list') }}"
                role="button">Annuler</a>
 
             {{ form_end(lieuForm) }}
 
     </div>
+
+        <br>
+        <br>
 {% endblock %}
