--- a/templates/lieu/list.html.twig
+++ b/templates/lieu/list.html.twig
@@ -39,6 +39,9 @@
     </section>
     <div class="container-fluid d-flex justify-content-center">
         <a class="link_button btn btn-outline-success" href="{{ path('lieu_create') }}" role="button">Créer un lieu</a>
+       </div>
+    <br>
+        <div class="container-fluid d-flex justify-content-center">
         <a class="link_button btn btn-outline-warning " href="{{ path('admin_dash') }}" role="button">Retour</a>
 
     </div>
