--- a/templates/admin/showVille.html.twig
+++ b/templates/admin/showVille.html.twig
@@ -45,7 +45,7 @@
 
         let marker = null;
 
-        function setMarker(lon, lat, rue, ville) {
+        function setMarker(lon, lat) {
             if (marker) {
                 marker.remove();
             }
