--- a/templates/admin/listuser.html.twig
+++ b/templates/admin/listuser.html.twig
@@ -27,10 +27,26 @@
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.firstname }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.campus.name }}</a></td>
                     <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">{{ user.email }}</a></td>
+{#                    {% if user.actif %}#}
+{#                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ✅ Actif </a></td>#}
+{#                    {% else %}#}
+{#                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ❌ </a></td>#}
+{#                    {% endif %}#}
+
                     {% if user.actif %}
-                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ✅ </a></td>
+                        <td>
+
+                            <a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">
+                                <button class="btn btn-success" disabled>Actif</button>
+                            </a>
+                        </td>
                     {% else %}
-                        <td><a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}"> ❌ </a></td>
+                        <td>
+
+                            <a class="list-group-item list-group-item-action" href="{{ path('user_show', {'id': user.id}) }}">
+                                <button class="btn btn-secondary">Inactif</button>
+                            </a>
+                        </td>
                     {% endif %}
                     <td><a  href="{{ path('user_update', {'id': user.id}) }}"> Modifier </a> - <a class="text-danger" href="{{ path('admin_user_delete', {'id': user.id}) }}"> Supprimer </a></td>
                 </tr>
