--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -6,7 +6,7 @@
             <a href="{{ path('main_home') }}"><img src="{{ asset('img/eni.png') }}" alt=" " style="width: 56px;"></a>
             <a class="navbar-brand text-white" href="{{ path('main_home') }}"><i
 
-                        class="fa fa-graduation-cap fa-lg mr-2"></i><strong>ENI SORTIE</strong></a>
+                        class="fa fa-graduation-cap fa-lg mr-2"></i><strong>SORTIE</strong></a>
         </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nvbCollapse"
